# django-react-starter

./: .cursorrules  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .tool-versions  CHANGELOG.example.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.example.md  README.md  TODO  TODO.md  biome.json  docker-compose.yml  fly.example.toml  fly.sample.toml  makefile  ty.toml
.githooks/: README.md  pre-commit
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: deploy-production.yml  deploy-staging.yml  deploy.yml  pre-commits.yml  qa-backend.yml  qa-frontend.yml  qa.yml  rebase-check.yml  test-backend.yml  test-frontend.yml  update-python-deps.yml  update-uv-lockfile.yml
.run/: Django tests.run.xml  Django.run.xml  React.run.xml  Services.run.xml  Vitest.run.xml
backend/: .coveragerc  .env.example  .env.test.example  .flake8  .gitignore  .isort.cfg  docker-compose.yml  makefile  manage.py  mypy.dev.ini  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run-app.sh  run-celery-worker.sh  run-scheduler.sh  supervisord.conf  wait_for_db.py
backend/authentication/: __init__.py  serializers.py  utils.py  views.py
backend/authentication/templates/authentication/: password_reset_email.html
backend/authentication/tests/: test_views.py
backend/core/: apps.py  emails.py  scheduler.py  serializers.py  views.py
backend/core/management/commands/: startscheduler.py  stopscheduler.py
backend/core/templates/core/: base.html
backend/core/templates/core/emails/: _banner.html  _footer.html  _style.html  base.html  example.html
backend/core/tests/: __init__.py  factories.py  test_views.py  utils.py
backend/django_react_starter/: asgi.py  celery.py  sentry.py  urls.py  wsgi.py
backend/django_react_starter/settings/: base.py  development.py  production.py  test.py
backend/django_react_starter/templates/admin/: base_site.html
backend/health/: __init__.py  apps.py  tests.py  views.py
backend/health/tests/: test_views.py
backend/scheduler/: __init__.py  apps.py  scheduler.py
backend/scheduler/management/commands/: startscheduler.py  stopscheduler.py
backend/user/: admin.py  apps.py  indexers.py  models.py  serializers.py  signals.py  tasks.py  views.py
backend/user/management/commands/: createsu.py
backend/user/migrations/: 0001_initial.py  0002_alter_user_managers.py
backend/user/tests/: factories.py  test_commands.py  test_indexers.py  test_models.py  test_views.py
docker/: Dockerfile.prod
docker/dev/: Dockerfile
docker/prod/: Dockerfile
fly/: production.example.toml  staging.example.toml
frontend/: .eslintrc.yml  .gitignore  .prettierrc.js  .prettierrc.yml  .stylelintrc.yml  biome.json  biome.sh  i18next-parser.config.ts  index.html  jest.config.js  jsconfig.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/i18n/: check-empty-translations.cjs  en.json  fr.json
frontend/src/: App.jsx  App.test.tsx  App.tsx  main.jsx  main.test.tsx  main.tsx
frontend/src/api/: constants.ts  index.ts  queryKeys.ts  types.ts  utils.ts
frontend/src/assets/: externalAssets.jsx  index.jsx  index.ts
frontend/src/components/: Logo.test.tsx  Logo.tsx  index.jsx
frontend/src/config/: daisyui.ts  dayjs.ts  i18n.ts  sentry.ts
frontend2/: i18next-parser.config.ts  index.html  package.json  vite.config.ts  vitest.config.ts
frontend2/i18n/: en.json  fr.json
frontend2/src/: App.tsx
(+408 files in other folders)
