[project]
name = "backend"
version = "4.1.0"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.4.0",
    "dj-database-url>=2.2.0",
    "django>=5.1.1",
    "django-celery-results>=2.5.1",
    "django-prometheus>=2.3.1",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.27.2",
    "gunicorn>=23.0.0",
    "meilisearch>=0.31.5",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.9",
    "sentry-sdk>=2.13.0",
    "whitenoise>=6.7.0",
    "django-utils-kit>=1.0.0",
    "django-meilisearch-indexer>=1.0.1",
    "django-anymail[sendinblue]>=13.0",
]

# ------------------------------
# UV
# ------------------------------
[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "django-stubs>=5.0.4",
    "djangorestframework-stubs>=3.15.0",
    "factory-boy>=3.3.1",
    "mypy>=1.11.2",
    "ruff>=0.6.4",
    "types-pytz>=2024.1.0.20240417",
    "types-requests>=2.32.0.20240907",
]

# ------------------------------
# MYPY
# ------------------------------
[tool.mypy]
python_version = "3.13"
mypy_path = "./backend"

check_untyped_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = false
show_column_numbers = true
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = "attr-defined,import-untyped"

plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "django_react_starter.settings.base"


# ------------------------------
# RUFF
# ------------------------------
[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = [
    "core",
    "health",
    "django_react_starter",
    "user",
    "authentication",
]
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
